[package]
name = "anki_controllers"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
gilrs = "0.8.1"
log = "0.4.14"
env_logger = "0.9.0"
serde = "1.0.136"
serde_json = "1.0.79"
custom_error = "1.9.2"
